bk_ida/gobmkida/c2/topological_eye
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/topological_eye/src/engine/optics.c:2164:19: error: use of undeclared identifier 'dword_496A28'
v23 = *( float *)&dword_496A28[v48]; 
                  ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/topological_eye/src/obj/1/optics.o] Error 1
